# wgpu-3dgs-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
coverage/: badge.json  coverage.rs  lcov.info  run.ps1
examples/: read_ply.rs  read_spz.rs  write_ply.rs  write_spz.rs
src/: compute_bundle.rs  error.rs  gaussian.rs  gaussian_config.rs  lib.rs  ply.rs  shader.rs  wesl.rs
src/buffer/: config.rs  gaussian.rs  gaussian_transform.rs  mod.rs  model_transform.rs
src/shader/: compute_bundle.wesl  compute_bundle_template.wesl  gaussian.wesl  gaussian_transform.wesl  model_transform.wesl
src/source_format/: mod.rs  ply.rs  spz.rs
tests/: mod.rs
tests/buffer/: gaussian.rs  gaussian_transform.rs  mod.rs  model_transform.rs
tests/common/: assert.rs  for_each_gaussian_pod.rs  given.rs  inline_wesl_pkg.rs  mod.rs  shader.rs
tests/common/shader/: array_map_add.wesl
tests/e2e/: compute_bundle.rs  gaussian.rs  mod.rs  ply.rs  spz.rs
tests/shader/: gaussian.rs  gaussian_transform.rs  mod.rs  model_transform.rs
