[package]
name = "wgpu-3dgs-core"
version = "0.4.0"
edition = "2024"
authors = ["Lio Qing"]
license = "MIT OR Apache-2.0"
description = "A 3D Gaussian splatting library written in Rust using wgpu."
readme = "README.md"
include = [
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*",
]
repository = "https://github.com/LioQing/wgpu-3dgs-core"
homepage = "https://github.com/LioQing/wgpu-3dgs-core"
keywords = ["gaussian-splatting", "point-cloud", "wgpu", "graphics", "ply"]
categories = ["graphics", "wasm"]

[lib]
name = "wgpu_3dgs_core"
path = "src/lib.rs"

[[example]]
name = "write-ply"
path = "examples/write_ply.rs"
doc-scrape-examples = true

[[example]]
name = "read-ply"
path = "examples/read_ply.rs"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
bytemuck = { version = "1.23", features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
] }
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2.6", features = ["bytemuck"] }
log = "0.4"
oneshot = "0.1"
paste = "1.0"
ply-rs = "0.1"
thiserror = "2.0"
wgpu = "26.0"
wesl = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
